# kuksa-mcp-bridge

./: .env.example  .gitignore  README.md  claude.md  docker-compose.yml
agent/: Dockerfile  pyproject.toml
agent/src/vehicle_agent/: __init__.py  __main__.py  config.py  gemini_agent.py  main.py  mcp_bridge.py  prompts.py  schemas.py
agent/tests/: __init__.py  conftest.py  test_config.py  test_gemini_agent.py  test_main.py  test_mcp_bridge.py  test_schemas.py
dashboard/: .env.example  Dockerfile  index.html  nginx.conf  package.json  tailwind.config.ts  tsconfig.json  vite.config.ts
dashboard/src/: App.tsx  index.css  vite-env.d.ts
dashboard/src/components/chat/: AiChatPanel.tsx  AiChatPlaceholder.tsx  ChatInput.tsx  ChatMessage.tsx  (+1 more)
dashboard/src/constants/: signals.ts
dashboard/src/context/: KuksaContext.tsx
dashboard/src/hooks/: useAgentChat.ts  useKuksaWebSocket.ts  useSignal.ts
dashboard/src/lib/: viss-client.ts
dashboard/src/types/: chat.ts  vss.ts
dashboard/tests/: setup.ts
dashboard/tests/components/: AiChatPanel.test.tsx  BatteryStatus.test.tsx  ChatInput.test.tsx  ChatMessage.test.tsx  DtcWarning.test.tsx  HvacPanel.test.tsx  RpmGauge.test.tsx  Speedometer.test.tsx  ToolCallCard.test.tsx
dashboard/tests/hooks/: useAgentChat.test.ts  useKuksaWebSocket.test.ts
dashboard/tests/lib/: viss-client.test.ts
dbc/: README.md
dbc/hyundai_kia/: hyundai_kia_generic.dbc  vss_dbc.json
dbc/scripts/: generate_candump.py  test_generate_candump.py
dbc/tesla_model3/: tesla_model3.dbc  vss_dbc.json
infra/: Dockerfile.databroker  vcan-setup.sh
mcp-server/: Dockerfile  pyproject.toml
mcp-server/src/kuksa_mcp/: __init__.py  config.py  dtc_database.py  kuksa_client.py  prompts.py  resources.py  server.py  tools.py
mcp-server/tests/: conftest.py  test_config.py  test_dtc_database.py  test_kuksa_client.py  test_prompts.py  test_resources.py  test_tools.py
scripts/: demo.sh
simulator/: Dockerfile  pyproject.toml
simulator/src/vehicle_sim/: __init__.py  battery.py  dtc.py  engine.py  hvac.py  main.py  scenarios.py  vehicle.py
simulator/tests/: test_scenarios.py
tests/: test_dbc_feeder.py
(+9 files in other folders)
