[project]
name = "kuksa-mcp-bridge"
version = "0.1.0"
description = "MCP bridge server for Eclipse Kuksa Databroker (VSS)"
requires-python = ">=3.11"
dependencies = [
    "mcp[cli]>=1.0.0",
    "kuksa-client>=0.4.0",
    "grpcio>=1.60.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/kuksa_mcp"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
